Add iowa city jail data integration

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name='dataloom-integrations'
 include 'template'
 include 'slcstolencars2012'
 include 'arrestscalifornia'
+include 'iowacity'
