--- a/slcstolencars2012/build.gradle
+++ b/slcstolencars2012/build.gradle
@@ -34,7 +34,7 @@ sourceSets {
 }
 
 dependencies {  
-    compile 'com.kryptnostic:shuttle-java:0.1.3-SNAPSHOT'
+    compile 'com.kryptnostic:shuttle:0.1.4-SNAPSHOT'
     compile fileTree(dir: "lib/", include: "*.jar")
 
     /*
