--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -12,7 +12,7 @@ description = "Integration Utils"
 group = "com.kryptnostic"
 version = 'v0.0.1'
 
-mainClassName = "com.dataloom.integrations.dataintegration.FormattedDateTime"
+mainClassName = "com.dataloom.integrations.utils.Tester"
 applicationDefaultJvmArgs = ["-Xmx8G", "-Xms8G", "-server"]
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
