--- a/iowacity/build.gradle
+++ b/iowacity/build.gradle
@@ -12,7 +12,7 @@ description = "Iowa City Jail Data"
 group = "com.openlattice"
 version = 'v0.0.1'
 
-mainClassName = "com.dataloom.integrations.iowacity.IowaCity"
+mainClassName = "com.dataloom.integrations.iowacity.JohnsonCountyIntegrations"
 applicationDefaultJvmArgs = ["-Xmx12G", "-Xms12G", "-server"]
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
