fix mugshot integration

--- a/DaneCountyWI/src/main/resources/edm.yaml
+++ b/DaneCountyWI/src/main/resources/edm.yaml
@@ -170,6 +170,7 @@ entityTypes:
   - "nc.SubjectIdentification"
   - "person.age"
   - "justice.xref"
+  - "publicsafety.mugshot"
   baseType: null
 - type: "lawenforcement.arrest"
   title: "Arrest"
